--- a/dashboard.html
+++ b/dashboard.html
@@ -504,8 +504,7 @@
 						<span class="icon">⚡</span>
 						<span>1. Generate Duty List</span>
 					</a>
-					<a class="button success" href="generate/3_vote_centre.html" title="Edit Duty List"
-						onclick="return checkPassword(event, 'generate/3_vote_centre.html')">
+					<a class="button success" href="generate/3_vote_centre.html" title="Edit Duty List">
 						<span class="icon">✏️</span>
 						<span>2. Edit Appointment Letter</span>
 					</a>
