--- a/dashboard.html
+++ b/dashboard.html
@@ -542,6 +542,11 @@
 						<span class="icon">⏳</span>
 						<span>খসড়া তালিকা</span>
 					</a>
+					<a class="button secondary" href="generate/1_apointment_letter_pre.html"
+						title="Duty Not assigned List">
+						<span class="icon">⏳</span>
+						<span>প্রিজাইডিং-সহ.প্রি. তালিকা</span>
+					</a>
 				</div>
 			</div>
 
