--- a/generate/1_apointment_letter_pre.html
+++ b/generate/1_apointment_letter_pre.html
@@ -519,8 +519,8 @@
                                 <th style="border: 1px solid #000; padding: 5px;">কেন্দ্র নং</th>
                                 <th style="border: 1px solid #000; padding: 5px;">কেন্দ্রের নাম</th>
                                 <th style="border: 1px solid #000; padding: 5px;">এলাকা</th>
-                                <th style="border: 1px solid #000; padding: 5px;">প্রিজাইডিং অফিসারের নাম ও পদবী</th>
-                                <th style="border: 1px solid #000; padding: 5px;">সহকারী প্রিজাইডিং অফিসারে</th>
+                                <th style="border: 1px solid #000; padding: 5px;">প্রিজাইডিং অফিসারের নাম ও পদবি</th>
+                                <th style="border: 1px solid #000; padding: 5px;">সহকারী প্রিজাইডিং অফিসারের নাম ও পদবি</th>
                                 <th style="border: 1px solid #000; padding: 5px;">মন্তব্য</th>
                             </tr>
                         </thead>
@@ -550,7 +550,7 @@
             if (presiding) {
                 const name = toBengaliNumber(getOfficerName(presiding, 'presiding'));
                 const designation = presiding.designation ? toBengaliNumber(presiding.designation) : '';
-                presInfo = `<strong>${name}</strong>`;
+                presInfo = `<span>${name}</span>`;
                 if (designation) {
                     presInfo += `<br><span style="font-size: 12px;">${designation}</span>`;
                 }
@@ -561,7 +561,7 @@
             if (firstAss) {
                 const name = toBengaliNumber(getOfficerName(firstAss, 'ass_presiding'));
                 const designation = firstAss.designation ? toBengaliNumber(firstAss.designation) : '';
-                assInfo = `<strong>${name}</strong>`;
+                assInfo = `<span>${name}</span>`;
                 if (designation) {
                     assInfo += `<br><span style="font-size: 12px;">${designation}</span>`;
                 }
