--- a/result/z_malamal.html
+++ b/result/z_malamal.html
@@ -226,9 +226,9 @@
             <table width="100%" class="top-materials-table" style="margin-top: 5px;">
                 <tr>
                     <td width="3%"></td>
-                    <td width="35%" class="text-center bg-gray fw-bold">বিবরণ</td>
-                    <td width="38%" class="text-center bg-gray fw-bold">সংখ্যা</td>
-                    <td width="24%" class="text-center bg-gray fw-bold">স্বচ্ছ ব্যালট বাক্স নম্বরঃ</td>
+                    <td width="18%" class="text-center bg-gray fw-bold">বিবরণ</td>
+                    <td width="18%" class="text-center bg-gray fw-bold">সংখ্যা</td>
+                    <td width="74%" class="text-center bg-gray fw-bold">স্বচ্ছ ব্যালট বাক্স নম্বরঃ</td>
                 </tr>
                 <tr>
                     <td class="text-center">১</td>
@@ -275,8 +275,8 @@
                     <td colspan="2" class="text-center">{{ink_qty}}</td>
                     <td class="text-center">টি</td>
                     <td class="text-center">১</td>
-                    <td colspan="8">ফরম-১৩: (প্রতিকেন্দ্র -৪টি) এ ইস্যুকৃত ও ব্যবহৃত স্বচ্ছ ব্যালট বাক্সের বিবরণী</td>
-                    <td class="text-center">৪ টি</td>
+                    <td colspan="8">ফরম-১৩: (প্রতিকেন্দ্র -৩টি) এ ইস্যুকৃত ও ব্যবহৃত স্বচ্ছ ব্যালট বাক্সের বিবরণী</td>
+                    <td class="text-center">৩ টি</td>
                 </tr>
                 <tr>
                     <td class="text-center">২</td>
@@ -284,7 +284,7 @@
                     <td colspan="2" class="text-center">{{rubber_seal_qty}}</td>
                     <td class="text-center">টি</td>
                     <td class="text-center">২</td>
-                    <td colspan="8">ফরম-১৪: (প্রতি কেন্দ্রের জন্য-৩টি) টেন্ডার্ড ভোটের তালিকা</td>
+                    <td colspan="8">ফরম-১৪: (প্রতি কেন্দ্রের জন্য-২টি) টেন্ডার্ড ভোটের তালিকা</td>
                     <td class="text-center">২ টি</td>
                 </tr>
                 <tr>
@@ -293,8 +293,8 @@
                     <td colspan="2" class="text-center">{{marking_seal_qty}}</td>
                     <td class="text-center">টি</td>
                     <td class="text-center">৩</td>
-                    <td colspan="8">ফরম-১৫: (প্রতি কেন্দ্রের জন্য -৫টি) আপত্তিকৃত ভোটের তালিকা</td>
-                    <td class="text-center">৫ টি</td>
+                    <td colspan="8">ফরম-১৫: (প্রতি কেন্দ্রের জন্য -৩টি) আপত্তিকৃত ভোটের তালিকা</td>
+                    <td class="text-center">৩ টি</td>
                 </tr>
                 <tr>
                     <td class="text-center">৪</td>
@@ -302,8 +302,8 @@
                     <td colspan="2" class="text-center">১</td>
                     <td class="text-center">টি</td>
                     <td class="text-center">৪</td>
-                    <td colspan="8">ফরম-১৬: ভোট গণনার বিবরণী ( প্রতি কেন্দ্রের জন্য ১৩টি)</td>
-                    <td class="text-center">১৩ টি</td>
+                    <td colspan="8">ফরম-১৬: ভোট গণনার বিবরণী ( প্রতি কেন্দ্রের জন্য ১০টি)</td>
+                    <td class="text-center">১০ টি</td>
                 </tr>
                 <tr>
                     <td class="text-center">৫</td>
@@ -311,8 +311,8 @@
                     <td colspan="2" class="text-center">{{stamp_pad_qty}}</td>
                     <td class="text-center">টি</td>
                     <td class="text-center">৫</td>
-                    <td colspan="8">ফরম-১৭: (প্রতি কেন্দ্রের জন্য ৮টি) ব্যালট পেপারের হিসাবে</td>
-                    <td class="text-center">৮ টি</td>
+                    <td colspan="8">ফরম-১৭: (প্রতি কেন্দ্রের জন্য ৬টি) ব্যালট পেপারের হিসাবে</td>
+                    <td class="text-center">৬ টি</td>
                 </tr>
                 <tr>
                     <td class="text-center">৬</td>
@@ -327,8 +327,8 @@
                     <td colspan="2" class="text-center">২</td>
                     <td class="text-center">টি</td>
                     <td class="text-center">১</td>
-                    <td colspan="8">প্যাকেট-১: (কেন্দ্র প্রতি -১০টি) প্রার্থীদের পক্ষে প্রদত্ত বৈধ ব্যালট রাখার জন্য প্যাকেট</td>
-                    <td class="text-center">১০ টি</td>
+                    <td colspan="8">প্যাকেট-১: (কেন্দ্র প্রতি -১১টি) প্রার্থীদের পক্ষে প্রদত্ত বৈধ ব্যালট রাখার জন্য প্যাকেট</td>
+                    <td class="text-center">১১ টি</td>
                 </tr>
                 <tr>
                     <td class="text-center">৮</td>
@@ -447,19 +447,23 @@
                     <td class="text-center">২ টি</td>
                 </tr>
                 <tr>
-                    <td colspan="9"></td>
+                    <td colspan="9" class="bg-gray text-center fw-bold">দেওয়ালপত্র</td>
                     <td class="text-center">১৫</td>
                     <td colspan="8">প্যাকেট-১৫: (কেন্দ্র প্রতি-২টি) ব্যালট পেপারের হিসাব রাখার জন্য</td>
                     <td class="text-center">৩ টি</td>
                 </tr>
                 <tr>
-                    <td colspan="9"></td>
+                    <td class="text-center">১</td>
+                    <td colspan="6">(ক) "প্রবেশ", " বাহির", </td>
+                    <td colspan="2" class="text-center">১ সেট</td>
                     <td class="text-center">১৬</td>
                     <td colspan="8">প্যাকেট-১৬: (বিবিধ কাগজপত্র রাখার প্যাকেট)</td>
                     <td class="text-center">১ টি</td>
                 </tr>
                 <tr>
-                    <td colspan="9" class="bg-gray text-center fw-bold">দেওয়ালপত্র ও পরিচয়পত্র</td>
+                    <td class="text-center">২</td>
+                    <td colspan="6">(খ) ভোট কক্ষ নং…………..(পুরুষ)</td>
+                    <td colspan="2" class="text-center">প্রয়োজনমত</td>
                     <td class="text-center">-</td>
                     <td colspan="8">বিশেষ খামঃ(কেন্দ্র প্রতি ২টি ডাকযোগে নিকস তে ভোট গণনা প্রেরণ)</td>
                     <td class="text-center">২ টি</td>
@@ -467,78 +471,84 @@
                 
                 <!-- Section: Wall Stickers/IDs (Left) & Referendum (Right) -->
                 <tr>
-                    <td class="text-center">১</td>
-                    <td colspan="6">(ক) "প্রবেশ", " বাহির", </td>
-                    <td colspan="2" class="text-center">১ সেট</td>
-                    <td colspan="10" class="bg-gray text-center fw-bold" style="font-size: 8.5pt;">গণভোটের জন্য ব্যবহৃত ফরম ও প্যাকেট সমূহ  ২ টি</td>
-                </tr>
-                <tr>
-                    <td class="text-center">২</td>
-                    <td colspan="6">(খ) ভোট কক্ষ নং…………..(পুরুষ)</td>
-                    <td colspan="2" class="text-center">প্রয়োজনমত</td>
-                    <td class="text-center">১</td>
-                    <td colspan="8">ফরম-৩ : প্রিজাইডিং অফিসার কর্তৃক ভোট গণনার বিবরণী (কেন্দ্র প্রতি)</td>
-                    <td class="text-center">৮ টি</td>
-                </tr>
-                <tr>
                     <td class="text-center">৩</td>
                     <td colspan="6">(গ) ভোট কক্ষ নং ………….(মহিলা)</td>
                     <td colspan="2" class="text-center">প্রয়োজনমত</td>
-                    <td class="text-center">২</td>
-                    <td colspan="8">ফরম-৫ : ব্যালট পেপারের হিসাব বিবরণী (কেন্দ্র প্রতি)</td>
-                    <td class="text-center">৪ টি</td>
+                    <td colspan="10" class="bg-gray text-center fw-bold" style="font-size: 8.5pt;">গণভোটের জন্য ব্যবহৃত ফরম ও প্যাকেট সমূহ  ২ টি</td>
                 </tr>
                 <tr>
                     <td class="text-center">৪</td>
                     <td colspan="6">(ঘ) ভোটগ্রহণকারী কর্মকর্তা ও এজেন্টগণের দেয়ালপত্র</td>
                     <td colspan="2" class="text-center">প্রয়োজনমত</td>
                     <td class="text-center">১</td>
+                    <td colspan="8">ফরম-৩ : প্রিজাইডিং অফিসার কর্তৃক ভোট গণনার বিবরণী (কেন্দ্র প্রতি)</td>
+                    <td class="text-center">৮ টি</td>
+                </tr>
+                <tr>
+                    <td colspan="9" class="bg-gray text-center fw-bold">পরিচয়পত্র</td>
+                    <td class="text-center">২</td>
+                    <td colspan="8">ফরম-৫ : ব্যালট পেপারের হিসাব বিবরণী (কেন্দ্র প্রতি)</td>
+                    <td class="text-center">৪ টি</td>
+                </tr>
+                <tr>
+                    <td class="text-center">১</td>
+                    <td colspan="6">প্রিজাইডিং অফিসারের পরিচয়পত্র (কেন্দ্র প্রতি ১টি)</td>
+                    <td colspan="2" class="text-center">১</td>
+                    <td class="text-center">১</td>
                     <td colspan="8">প্যাকেট-১: "হ্যাঁ" সূচক/ 'না' সূচক বৈধ ব্যালট পেপার রাখার জন্য (কেন্দ্র প্রতি)</td>
                     <td class="text-center">৬ টি</td>
                 </tr>
                 <tr>
-                    <td class="text-center">৫</td>
-                    <td colspan="6">প্রিজাইডিং অফিসারের পরিচয়পত্র (কেন্দ্র প্রতি ১টি)</td>
-                    <td colspan="2" class="text-center">১</td>
+                    <td class="text-center">২</td>
+                    <td colspan="6">সহকারী প্রিজাইডিং অফিসারের পরিচয়পত্র (কক্ষ প্রতি ১টি)</td>
+                    <td colspan="2" class="text-center">{{voter_both_total}}</td>
                     <td class="text-center">২</td>
                     <td colspan="8">প্যাকেট-২: অবৈধ বা গণনা থেকে বাদ দেওয়া ব্যালট পেপার রাখার জন্য (কেন্দ্র প্রতি)</td>
                     <td class="text-center">১ টি</td>
                 </tr>
                 <tr>
-                    <td class="text-center">৬</td>
-                    <td colspan="6">সহকারী প্রিজাইডিং অফিসারের পরিচয়পত্র (কক্ষ প্রতি ১টি)</td>
-                    <td colspan="2" class="text-center">{{voter_both_total}}</td>
+                    <td class="text-center">৩</td>
+                    <td colspan="6">পোলিং অফিসারের পরিচয়পত্র (কক্ষ প্রতি ২টি)</td>
+                    <td colspan="2" class="text-center">{{voter_both_total_x2}}</td>
                     <td class="text-center">৩</td>
                     <td colspan="8">প্যাকেট-৩: অব্যবহৃত ব্যালট পেপার রাখার জন্য (কেন্দ্র প্রতি)</td>
                     <td class="text-center">১ টি</td>
                 </tr>
                 <tr>
-                    <td class="text-center">৭</td>
-                    <td colspan="6">পোলিং অফিসারের পরিচয়পত্র (কক্ষ প্রতি ২টি)</td>
-                    <td colspan="2" class="text-center">{{voter_both_total_x2}}</td>
+                    <td class="text-center">৪</td>
+                    <td colspan="6">পোলিং এজেন্টের পরিচয়পত্র (প্রয়োজন অনুসারে)</td>
+                    <td colspan="2" class="text-center">{{voter_both_total_x11}}</td>
                     <td class="text-center">৪</td>
                     <td colspan="8">প্যাকেট-৪: নষ্ট বা বাতিলকৃত ব্যালট পেপার রাখার জন্য (কেন্দ্র প্রতি)</td>
                     <td class="text-center">১ টি</td>
                 </tr>
                 <tr>
-                    <td class="text-center">৮</td>
-                    <td colspan="6">পোলিং এজেন্টের পরিচয়পত্র (প্রয়োজন অনুসারে)</td>
-                    <td colspan="2" class="text-center">প্রয়োজনমত</td>
+                    <td colspan="9" class="bg-gray text-center fw-bold">ব্যানার/ফেস্টুন</td>
                     <td class="text-center">৫</td>
                     <td colspan="8">প্যাকেট-৫: ব্যবহৃত ব্যালট পেপারের মুড়িপত্র রাখার জন্য (কেন্দ্র প্রতি)</td>
                     <td class="text-center">১ টি</td>
                 </tr>
                 <tr>
-                    <td colspan="9"></td>
+                    <td class="text-center">১</td>
+                    <td colspan="6">ভোটকেন্দ্রের প্রবেশযোগ্য ব্যক্তি</td>
+                    <td colspan="2" class="text-center">১</td>
                     <td class="text-center">৬</td>
                     <td colspan="8">প্যাকেট-৬: ফলাফল বিববরণী (ফরম-৩) রাখার জন্য (কেন্দ্র প্রতি)</td>
                     <td class="text-center">১ টি</td>
                 </tr>
                 <tr>
-                    <td colspan="9"></td>
+                    <td class="text-center">২</td>
+                    <td colspan="6">গণভোট ফেস্টুন</td>
+                    <td colspan="2" class="text-center">২</td>
                     <td class="text-center">৭</td>
                     <td colspan="8">প্যাকেট-৭: ব্যালট পেপার হিসাব বিবরণী রাখার জন্য (কেন্দ্র প্রতি)</td>
                     <td class="text-center">১ টি</td>
+                </tr>
+                <tr>
+                    <td class="text-center">৩</td>
+                    <td colspan="6">মূল্যায়ন ফরম</td>
+                    <td colspan="2" class="text-center">৩</td>
+                    <td colspan="9"></td>
                 </tr>
             </table>
 
@@ -773,6 +783,7 @@
                     presiding_name: presidingName,
                     voter_both_total: this.toBn(voterBothTotal),
                     voter_both_total_x2: this.toBn(voterBothTotal * 2),
+                    voter_both_total_x11: this.toBn(voterBothTotal * 11),
                     male_voter: this.toBn(d.male_voter || 0),
                     female_voter: this.toBn(d.female_voter || 0),
                     hizra_voter: this.toBn(d.hizra_voter || 0),
@@ -780,8 +791,8 @@
                     total_officer: this.toBn(totalOfficer),
                     ballot_box_qty: this.toBn(ballotBoxQty),
                     ballot_box_seal_qty: this.toBn(ballotBoxSealQty),
-                    ballot_box_qty_new: this.toBn(voterBothTotal + 1),
-                    ballot_box_seal_qty_new: this.toBn((voterBothTotal + 1) * 5),
+                    ballot_box_qty_new: this.toBn(voterBothTotal + 2),
+                    ballot_box_seal_qty_new: this.toBn((voterBothTotal + 2) * 5),
                     ballot_paper_numbers: this.toBn(this.padZero(d.startSerial, 7)) + ' - ' + this.toBn(this.padZero(d.endSerial, 7)),
                     referendum_ballot_numbers: d.referendumSerial,
                     ballot_box_numbers: '',
